--- a/Makefile.win
+++ b/Makefile.win
@@ -7,6 +7,7 @@
 
 ####### Compiler, tools and options
 
+SHELL 	      = cmd.exe
 CC            = i686-w64-mingw32-gcc
 CXX           = i686-w64-mingw32-g++
 DEFINES       = -DUNICODE
