set static build on MS win Makefile

--- a/Makefile.win
+++ b/Makefile.win
@@ -11,11 +11,11 @@ SHELL 	      = cmd.exe
 CC            = i686-w64-mingw32-gcc
 CXX           = i686-w64-mingw32-g++
 DEFINES       = -DUNICODE
-CFLAGS        = -pipe -fno-keep-inline-dllexport -g -Wall -Wextra $(DEFINES)
-CXXFLAGS      = -pipe -fno-keep-inline-dllexport -g -frtti -fexceptions -mthreads -Wall -Wextra $(DEFINES)
+CFLAGS        = -pipe -static -static-libgcc -g -Wall -Wextra $(DEFINES)
+CXXFLAGS      = -pipe -static -static-libstdc++ -g -fexceptions -Wall -Wextra $(DEFINES)
 INCPATH       = -I"." -I"debug"
 LINK          = i686-w64-mingw32-g++
-LFLAGS        = -mthreads -Wl,-subsystem,windows
+LFLAGS        = -Wl,-subsystem,windows -static -static-libgcc -static-libstdc++
 LIBS          = 
 QMAKE         = qmake.exe
 IDC           = idc.exe
