updated Makefile.win to run both on cmd.exe terminal and msys terminal on MS Win

--- a/Makefile.win
+++ b/Makefile.win
@@ -15,7 +15,7 @@ CFLAGS        = -pipe -static -static-libgcc -g -Wall -Wextra $(DEFINES)
 CXXFLAGS      = -pipe -static -static-libstdc++ -g -fexceptions -Wall -Wextra $(DEFINES)
 INCPATH       = -I"." -I"debug"
 LINK          = i686-w64-mingw32-g++
-LFLAGS        = -Wl,-subsystem,windows -static -static-libgcc -static-libstdc++
+LFLAGS        = -static -static-libgcc -static-libstdc++
 LIBS          = 
 QMAKE         = qmake.exe
 IDC           = idc.exe
